# FullSubNet

./: .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  inference.py  pyproject.toml  train.py
audio_zen/: constant.py  loss.py  metrics.py  utils.py
audio_zen/acoustic/: feature.py  mask.py  utils.py
audio_zen/acoustics/: beamforming.py  feature.py  filtebank.py  mask.py  rvb.py  utils.py
audio_zen/dataset/: base_dataset.py
audio_zen/inferencer/: base_inferencer.py
audio_zen/model/: base_model.py
audio_zen/trainer/: base_trainer.py
config/common/: fullband_inference.toml  fullband_train.toml  fullsubnet_inference.toml  fullsubnet_train.toml
config/inference/: fullsubnet.toml
config/train/: fullband_baseline.toml  fullband_try1.toml  fullsubnet_baseline.toml
docs/: Makefile  fullsubnet.md  fullsubnet_dns_interspeech.md  fullsubnet_dns_interspeech.txt  fullsubnet_fullband_baseline.md  getting_started.md  prerequisites.md  requirements.txt
docs/source/: conf.py  index.rst
recipes/dns_interspeech_2020/: README.md  dataset_inference.py  dataset_train.py  dataset_validation.py  inference.py  inferencer.py  train.py
scripts/: calculate_metrics.py  preprocessing_dataset.py
src/common/: dataset.py  inferencer.py  model.py  trainer.py
src/dataset/: DNS_INTERSPEECH_train.py  DNS_INTERSPEECH_validation.py
src/dns_interspeech_2020/: dataset_validation.py  inferencer.py  train.py
src/inferencer/: DNS_INTERSPEECH.py
tools/: calculate_metrics.py  delete_slience.py  find_wavs.py  preprocessing_dataset.py
(+58 files in other folders)
