# ----------------- Build System -----------------
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# ----------------- Metadata -----------------
[project]
name = "FullSubNet"
description = "The FullSubNet a full-band and sub-band fusion model for single-channel real-time speech enhancement."
authors = [{ name = "HAO Xiang", email = "haoxiangsnr@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA",
    "Operating System :: OS Independent",
]
keywords = ["speech enhancement", "single-channel"]
dependencies = [
    "webrtcvad",
    "numpy",
    "scipy",
    "matplotlib",
    "geomdl",
    "joblib",
    "librosa",
    "pyroomacoustics",
    "soundfile",
    "toml",
    "tqdm",
    "pydantic",
    "typing_inspect",
]
[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = ["sphinx-rtd-theme", "myst-nb", "autodoc_pydantic"] # TODO add python-semantic-release?
build = ["flit"]
[project.urls]
Documentation = "https://FullSubNet.readthedocs.io/en/latest/"
Source = "https://github.com/haoxiangsnr/FullSubNet"
